--- a/VantageGA/Views/Transactions/TransactionInfo.cshtml
+++ b/VantageGA/Views/Transactions/TransactionInfo.cshtml
@@ -9,18 +9,23 @@
     -->
 
 <html>
+<head>
+</head>
 <body>
     <div class="jumbotron text-center">
         <form class="form-inline">
             <div class="dropdown">
-                <p>Transaction Type : <button class="btn btn-toolbar dropdown-toggle" type="button" data-toggle="dropdown"></p>
-                Select Transaction Type
-                <span class="caret"></span>
-                </button>
+                <p>
+                    Transaction Type : <button class="btn btn-toolbar dropdown-toggle" type="button" data-toggle="dropdown">
+                        Select Transaction Type
+                        <span class="caret"></span>
+                    </button>
+                </p>
                 <ul class="dropdown-menu">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#">PrePay</a></li>
+                    <li><a href="#">PostPay</a></li>
+                    <li><a href="#">PayAtThePump</a></li>
+                    <li><a href="#">LoyaltyOutPayIn (LOPI)</a></li>
                 </ul>
             </div>
             <div class="dropdown">
