--- a/VantageGA/Views/Shared/_Layout.cshtml
+++ b/VantageGA/Views/Shared/_Layout.cshtml
@@ -1,30 +1,47 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>@ViewBag.Title - Vantage</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <header>
-        
-    </header>
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr/>
-        <footer>
-            <div class="container">
-                <div class="text-left">
-                    <p>&copy; @DateTime.Now.Year - Vantage Google Assistant Application</p>
+    <div class="">
+        <header>
+            @{
+                var mycollection = @ViewBag.Message;
+            }
+            <div class="content-wrapper">
+                <div class="float-left">
+                    <p class="site-title"><img style="padding-top:5px;padding-left:15px;padding-right:15px;" src="../../Images/logo.gif" />@Html.ActionLink("Vantage Application", "TransactionInfo", "Transactions")</p>
+                </div>
+                <div class="float-right">
                 </div>
             </div>
-            
-        </footer>
+        </header>
     </div>
 
+    <div id="body" class="text-center">
+
+        @*@RenderSection("featured", required: false)*@
+        <section class="content-wrapper main-content clear-fix">
+            @RenderBody()
+        </section>
+    </div>
+    <footer>
+        <div class="content-wrapper">
+            <div class="float-left">
+                <p>&copy; @DateTime.Now.Year - Vantage Application</p>
+            </div>
+        </div>
+
+    </footer>
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
