--- a/VantageGA/Views/Shared/_van.cshtml
+++ b/VantageGA/Views/Shared/_van.cshtml
@@ -1,52 +1,39 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>@ViewBag.Title - CR Supply Chain</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - Vantage</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @*       <script src="../../Scripts/jquery-1.7.1.min.js" type="text/javascript"></script>*@
-    <script src="../../Scripts/jquery-1.9.1.js" type="text/javascript"></script>
-    <script src="../../Scripts/jquery-migrate-1.1.1.min.js" type="text/javascript"></script>
-    <script src="../../Scripts/modernizr-2.5.3.js" type="text/javascript"></script>
-    <script src="../../Scripts/jquery.validate.min.js" type="text/javascript"></script>
-    <script src="../../Scripts/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
-    @Scripts.Render("~/bundles/jquery")
-    @Styles.Render("~/Content/kendo")
-    @Scripts.Render("~/bundles/kendo")
-    @* <script src="../../Scripts/js/kendo.all.min.js" type="text/javascript"></script>
-        <script src="../../Scripts/js/kendo.dataviz.min.js" type="text/javascript"></script>   *@
-
-
-    @*    <script type="text/javascript" src="../../Scripts/GlobalNavigation.js"></script>*@
 </head>
 <body>
- <div id="body">
-        @*@RenderSection("featured", required: false)*@
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
-    </div>
-
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - Vantage</p>
-            </div>
+    <header>
+        <div class="vantagetitle">
+            <p class="site-title"><img style="padding-top:0px;padding-left:5px;padding-right:5px;" src="../../Images/logo.gif" />@Html.ActionLink("Vantage Application", "Index", "Home")</p>
         </div>
-    </footer>
 
-    @* @Scripts.Render("~/bundles/jquery")*@
-    @RenderSection("scripts", required: false)
+    </header>
+
+    <div class="vantagenav">
+        <nav>
+            <ul id="van_menu">
+                
+            </ul>
+        </nav>
+
+    </div>
+        <div>
+            @RenderBody()
+        </div>
+
+    
+        <footer>
+                <div class="vantagefooter">
+                    <p>&copy; @DateTime.Now.Year - Vantage Google Assistant Application</p>
+                </div>
+        </footer>
 </body>
 </html>
-
-
-
-
-
-
